[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.32", features = ["derive"] }
serde = "1.0"
serde_json = "1.0.140"
secp256k1 = { version = "0.30.0", features = ["rand"] }
musig2 = { git = "https://github.com/halseth/musig2.git", rev = "47fe67f", features = ["rand"]}
hex = "0.4.3"

